<resources>
    <string name="app_name">Venmo Clone Project 1</string>
    <string name="action_settings">Settings</string>

    <string name="nav_drawer_open">Open Nav Drawer</string>
    <string name="nav_drawer_close">Close Nav Drawer</string>


    <string name="search_people">Search People</string>
    <string name="venmo_card">Venmo Card</string>
    <string name="scan_code">Scan Code</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="incomplete">Incomplete</string>
    <string name="purchases">Purchases</string>
    <string name="get_help">Get Help</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
