<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        
        <item
            android:id="@+id/nav_search"
            android:title="@string/search_people"
            />

        <item
            android:id="@+id/nav_venmo_card"
            android:title="@string/venmo_card"
            />
        <item
            android:id="@+id/nav_scan_code"
            android:title="@string/scan_code"
            />
        <item
            android:id="@+id/nav_payment_methods"
            android:title="@string/payment_methods"
            />
        <item
            android:id="@+id/nav_incomplete"
            android:title="@string/incomplete"
            />
        <item
            android:id="@+id/nav_purchases"
            android:title="@string/purchases"
            />

        <item
            android:id="@+id/nav_get_help"
            android:title="@string/get_help"
            />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            />

    </group>





</menu>